<resources>
    <string name="app_name">Robert_Kraut_cz_8</string>
    <string name="text1">1</string>
    <string name="text2">2</string>
    <string name="text3">3</string>
    <string name="text4">4</string>
    <string name="text5">5</string>
    <string name="text6">6</string>
    <string name="text7">7</string>
    <string name="text8">8</string>
    <string name="text9">9</string>
    <string name="textEq">=</string>
    <string name="textPlus">+</string>
    <string name="textMinus">-</string>
    <string name="textDiv">÷</string>
    <string name="textMul">×</string>
    <string name="textClear">Clear</string>
    <string name="text0">0</string>
    <string name="textDot">.</string>
</resources>